Remove fixed height:400px from .fp-panel__image img on mobile

--- a/style.css
+++ b/style.css
@@ -406,7 +406,6 @@ h6,
   }
 
   .fp-panel__image img {
-    height: 400px;
     object-fit: cover;
   }
 
